--- a/examples/uopy_web/templates/memedit.html
+++ b/examples/uopy_web/templates/memedit.html
@@ -15,7 +15,7 @@
         margin:auto;
      }
     </style>
-<div class="container">
+<div class="content">
 <h2>Member Edit</h2>
 <!--<form  method="post">-->
   {% from "_formhelpers.html" import render_field %}
